--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 --------------------------------------------------------
 Who?    So far it's all me: amanda.owen@gmail.com.
 What?   Supposed to be an app that will monitor TV 
-        listings an email when a new series of a
+        listings and email when a new series of a
         specified TV show is due to start in the next
         week. Further extensions to the scope are 
         already planned.
